# jauto-profiler-mcp

./: .gitignore  Makefile  README.md  setup
build-src/: download-asm  extract-asm  find-java-home  gen-asm-deps  gen-eclipse-classpath  gen-eclipse-project  get-musl  setup  tests.mk
build-src/entry-points/: jauto-prof-mcp
c-src/: bc-instrument.c  bc-instrument.h  bytecode.c  bytecode.h  class-info-list.c  class-info.c  class-info.h  dyn-arr.c  dyn-arr.h  ev-queue.c  ev-queue.h  jauto-profiler.c  jni-profiler.c  jni-profiler.h  jvmti-hooks.c  prof-env.c  prof-env.h  prof-server-ev.c  prof-server-ev.h  prof-server-msg.h  prof-server.c  prof-server.h  ps-thread-state.c  ps-thread-state.h  ps-uif-handler.c  ps-uif-handler.h  pstring.c  queued-instrument.c  queued-instrument.h  ref-count.h  uif-response.c  uif-response.h  user-if.c  user-if.h
c-src/jni/: jni-profiler.c  jni-profiler.h
c-src/main/: bytecode.c  bytecode.h  class-info-list.c  class-info-list.h  class-info.c  class-info.h  instrument-handler.c  instrument-handler.h  jvmti-hooks.c  master-instruments.c  master-instruments.h  prof-env.c  prof-env.h  prof-err-log.c  prof-err-log.h  prof-server-ev.c  prof-server-ev.h  prof-server-msg.h  prof-server.c  prof-server.h  ps-thread-state.c  ps-uif-handler.c  queued-instrument.c  queued-instrument.h  uif-response.c  uif-response.h  user-if.c  user-if.h
c-src/meta/: cc.h
docs/: DEVELOPERS.md  SKILL.md  dist-README.md
py-src/: jauto-prof-mcp.py  jauto_prof_cli.py  prof_client.py  pyproject.toml  time_util.py
scripts/: jauto-prof  jauto-prof-mcp  run-test-app
(+44 files in other folders)
